Добавлен propel в зависимости

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
             "email": "pavel@gnedov.info"
         }
     ],
-    "require": {}
+    "require": {
+        "propel/propel": "~2.0@dev"
+    }
 }
