--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "autoload": {
         "psr-4": {
             "Gtd\\": "./src"
-        }
+        },
+        "classmap": ["generated-classes/"]
     }
 }
