--- a/propel.php.dist
+++ b/propel.php.dist
@@ -10,13 +10,7 @@ return [
 					'dsn'        => 'mysql:host=localhost;dbname=gtdserver',
 					'user'       => 'gtdserver',
 					'password'   => '<password>',
-					'attributes' => [],
-					'settings' => [
-						'charset' => 'utf8mb4',
-						'queries' => [
-							'utf8' => 'SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci, COLLATION_CONNECTION = utf8mb4_unicode_ci, COLLATION_DATABASE = utf8mb4_unicode_ci, COLLATION_SERVER = utf8mb4_unicode_ci'
-						]
-					]
+					'attributes' => []
 				]
 			]
 		],
