Исправлен автозагрузчик классов composer

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Gtd\\": "./src"
-        },
-        "classmap": ["generated-classes/"]
+            "Gtd\\": "src",
+            "Gtd\\Propel\\": "generated-classes/Gtd/Propel"
+        }
     }
 }
