--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "propel/propel": "~2.0@dev",
-        "slim/slim": "^3.0"
+        "slim/slim": "^3.0",
+        "bryanjhv/slim-session": "~3.0"
     },
     "autoload": {
         "psr-4": {
