--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "propel/propel": "~2.0@dev",
         "slim/slim": "^3.0",
-        "bryanjhv/slim-session": "~3.0"
+        "bryanjhv/slim-session": "~3.0",
+        "monolog/monolog": "^1.23"
     },
     "autoload": {
         "psr-4": {
