--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "propel/propel": "~2.0@dev",
         "slim/slim": "^3.0",
         "bryanjhv/slim-session": "~3.0",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "ulrichsg/getopt-php": "3.1.0"
     },
     "autoload": {
         "psr-4": {
